Final-ish Draft

--- a/contact.html
+++ b/contact.html
@@ -37,19 +37,19 @@
 
             Name
             <br>
-            <input type=text name="Name" class= "textbox">
+            <input type=text name="Name" class="textbox">
 
             <br>
 
             Email
             <br>
-            <input type=text name="Email" class= "textbox">
+            <input type=text name="Email" class="textbox">
 
             <br>
 
             Message
             <br>
-            <input type=text name="Message" class= "textbox">
+            <input type=text name="Message" class="textbox">
 
         </form>
 
@@ -64,5 +64,8 @@
 <!-- i still have to figure out how exactly to get the
     css to line up the "about, contact, portfolio" tags to
     line up in container 1 along side my name. i cant get past
-    how i cant use "display:inline and float: in the same string.."
- -->
+    how i cant use "display:inline and float: in the same string..
+    Also, i forgot to push my final draft of the portfolio and 
+    contact page. So I have to redo them..  
+    "Lesson learned" -The Hard Way
+-->
