--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <div class= "buttons">
+    <div class="buttons">
 
         <h1>Hunter Storm Hawk</h1>
 
@@ -42,11 +42,12 @@
         <br>
 
         <p id="p1">
-            Hello everyone! My name is Hunter Storm Hawk. Im not kidding, and I wouldn't change it for the world. I'm
-            23 years old and I'm a full time
-            student at The University of Arizona, looking to be certified as a Full Stack Technician and Front-End
-            Website Developer. I have big goals of becoming very successful and to become
-            a positive advocate for tattooed individuals in a professional environment.
+            Hello everyone! My name is Hunter Storm Hawk. Im not kidding, and I 
+            wouldn't change it for the world. I'm 23 years old and I'm a full time
+            student at The University of Arizona, looking to be certified as a Full 
+            Stack Technician and Front-End Website Developer. I have big goals of 
+            becoming very successful and to become a positive advocate for tattooed 
+            individuals in a professional environment.
         </p>
 
         <p id="p2">
@@ -63,7 +64,7 @@
 
     </div>
 
-    <footer class= "footer">© 2018 Hunter Storm Hawk</footer>
+    <footer class="footer">© 2018 Hunter Storm Hawk</footer>
 
 </body>
 
