--- a/portfolio.html
+++ b/portfolio.html
@@ -28,3 +28,12 @@
 <link rel="stylesheet" href="assets/css/style.css">
 
 </html>
+
+<!-- i still have to figure out how exactly to get the
+    css to line up the "about, contact, portfolio" tags to
+    line up in container 1 along side my name. i cant get past
+    how i cant use "display:inline and float: in the same string..
+    Also, i forgot to push my final draft of the portfolio and 
+    contact page. So I have to redo them..  
+    "Lesson learned" -The Hard Way
+-->
